# vkhel

./: .gitignore  meson.build  meson_options.txt  vkhel.syms
.github/workflows/: lavapipe.yml
examples/: example.c  meson.build
include/: vkhel.h
include/priv/: ntt_tables.h  numbers.h  vector.h  vkhel.h  vulkan.h
include/priv/kernels/: elemadd.h  elemfma.h  elemgtadd.h  elemgtsub.h  elemmodbytwo.h  elemmul.h  elemmulconst.h  nttfwdbutterfly.h  nttrevbutterfly.h
include/vkhel/: vkhel.h
src/: ntt_tables.c  numbers.c  vector.c  vkhel.c  vulkan.c
src/kernels/: elemadd.c  elemfma.c  elemgtadd.c  elemgtsub.c  elemmodbytwo.c  elemmul.c  elemmulconst.c  nttfwdbutterfly.c  nttrevbutterfly.c
src/kernels/shaders/: elemadd.comp  elemfma.comp  elemgtadd.comp  elemgtsub.comp  elemmodbytwo.comp  elemmul.comp  elemmulconst.comp  meson.build  nttfwdbutterfly.comp  nttrevbutterfly.comp
src/shaders/: meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build
test/: meson.build  ntt.c  numbers.c  vector.c
